# civfun_gmr

./: Cargo.toml
civ5save/: Cargo.toml
civ5save/saves/: Ahmad al-Mansur_0054 BC-0840.Civ5Save  Casimir III_0005 BC-3700.Civ5Save  Casimir III_0028 BC-2320.Civ5Save  Casimir III_0029 BC-2260.Civ5Save  Elizabeth_0437 AD-2017.Civ5Save  Genghis Khan_0138 AD-1480.Civ5Save  Harun al-Rashid_0179 AD-1770.Civ5Save  Pocatello_0164 AD-1040.Civ5Save  Suleiman_0021 BC-2740.Civ5Save
civ5save/src/: lib.rs
src/: api.rs  lib.rs  main.rs  manager.rs  style.rs  ui.rs
src/manager/: mod.rs
src/ui/: actions.rs  auth_key_screen.rs  error_screen.rs  games_list.rs  mod.rs  prefs.rs  style.rs
