[package]
name = "giant_multiplayer_robot"
version = "0.0.1"
edition = "2018"
authors = ["gak"]

[dependencies]
clap = "3.0.0-beta.4"
sled = "0.34.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
directories = "4.0.1"