[package]
name = "civfun_gmr"
version = "0.0.1"
edition = "2018"
authors = ["gak"]

[dependencies]
anyhow = "1.0.44"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
clap = "3.0.0-beta.4"
sled = "0.34.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
directories = "4.0.1"
iced = "0.3.0"