[package]
name = "civfun_gmr"
version = "0.0.1"
edition = "2018"
authors = ["gak"]

[dependencies]
civ5save = { path = "civ5save" }

anyhow = "1.0.44"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
clap = "3.0.0-beta.4"
sled = "0.34.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["stream", "multipart"] }
tokio = { version = "1.12.0", features = ["full"] }
directories = "4.0.1"
iced = { version = "0.3.0", features = ["tokio", "svg"] }
open = "2.0.1"
tempfile = "3.2.0"
notify = "4.0.16"
regex = "1.5.4"