[package]
name = "civ5save"
version = "0.1.0"
edition = "2018"

[dependencies]
#thiserror = "1.0.30"
anyhow = "1.0.44"

byteorder = "1.4.3"
tracing = "0.1.29"

# Debugging
pretty-hex = "0.2.1"

[dev-dependencies]
test-env-log = { version = "0.2.7", default-features = false, features = ["trace"] }
tracing-subscriber = "0.2.25"

